--- a/src/app/app.view.html
+++ b/src/app/app.view.html
@@ -12,7 +12,15 @@
       </button>
     </div>
     <div class="col-sm text-right" *ngIf="activeRoute == '/nl/search'">
-      {{activeRoute}}
+      <form class="form-inline searchbox" #form="ngForm" (submit)="search(form.value)">
+        <label class="sr-only col-form-label" 
+          for="inlineFormInputGroup">Username</label>
+        <div class="input-group mb-2 mt-3 w-100">
+          <input type="text" class="form-control" name="location"  ngModel
+            id="inlineFormInputGroup" placeholder="address, neighborhood, city, state or zip">
+          <div class="input-group-addon" (click)="search(form.value)">Search</div>
+        </div>
+      </form>
     </div>
   </div>
   
