--- a/src/styles.css
+++ b/src/styles.css
@@ -22,19 +22,6 @@
     background-color: rgba(255, 255, 255, 0.15);
     border-color: rgba(255, 255, 255, 0.2);
 }
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 90px;
-  color: #999999;
-  font-size: 0.9rem;
-}
-.credit {
-  color: rgba(150, 150, 150, 0.5);
-  font-size: 0.9rem;
-}
 
 .form-inline .form-control{
     background: rgba(255, 255, 255, 0.15);
@@ -67,13 +54,18 @@ color: rgba(255, 255, 255, 0.4) !important;
   flex: 1 1 auto;
 
 }
+
+.white {
+  color: #FFFFFF;
+}
+* {
+	margin: 0;
+}
 body, html {
+  height: 100%;
   padding: 0;
   margin: 0;
   background-color: unset;
-}
-body {
-  margin-bottom: 100px;
   font-family: 'Roboto', sans-serif;
 }
 html { 
@@ -84,6 +76,27 @@ html {
   background-size: cover;
 }
 
-.white {
-  color: #FFFFFF;
+#wrap {
+  min-height: 100%;
+	margin-bottom: -100px; 
 }
+#wrap:after {
+  content: "";
+  display: block;
+}
+
+footer, #wrap:after {
+	height: 100px; 
+}
+
+footer {
+  clear:both;
+  padding-top:20px;
+  color: #999999;
+  font-size: 0.9rem;
+}
+.credit {
+  color: rgba(150, 150, 150, 0.5);
+  font-size: 0.9rem;
+}
+
