--- a/src/app/search/search.view.html
+++ b/src/app/search/search.view.html
@@ -34,7 +34,7 @@
         </masonry-brick>
       </masonry>
     </div>
-    <div class="col-sm text-center" *ngIf="bricks.length === 0">
+    <div class="col-sm text-center white" *ngIf="bricks.length === 0">
       <br><br>
       <p>No results found. Try searching again</p>
       <br><br>
