--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -30,9 +30,9 @@
 						<strong>password</strong>: <%= user.local.password %>
 					</p>
 					
-					<a href="/unlink/local" class="btn btn-default">Unlink</a>
+					<a href="/auth/unlink/local" class="btn btn-default">Unlink</a>
 				<% } else { %>
-					<a href="/connect/local" class="btn btn-default">Connect Local</a>
+					<a href="/auth/connect/local" class="btn btn-default">Connect Local</a>
 				<% } %>
 
 			</div>
@@ -51,9 +51,9 @@
 						<strong>email</strong>: <%= user.facebook.email %><br>
 						<strong>name</strong>: <%= user.facebook.name %><br>
 					</p>
-					<a href="/unlink/facebook" class="btn btn-primary">Unlink</a>
+					<a href="/auth/unlink/facebook" class="btn btn-primary">Unlink</a>
 				<% } else { %>
-					<a href="/connect/facebook" class="btn btn-primary">Connect Facebook</a>
+					<a href="/auth/connect/facebook" class="btn btn-primary">Connect Facebook</a>
 				<% } %>
 
 			</div>
@@ -73,9 +73,9 @@
 						<strong>display name</strong>: <%= user.twitter.displayName %><br>
 						<strong>username</strong>: <%= user.twitter.username %>
 					</p>
-					<a href="/unlink/twitter" class="btn btn-info">Unlink</a>
+					<a href="/auth/unlink/twitter" class="btn btn-info">Unlink</a>
 				<% } else { %>
-					<a href="/connect/twitter" class="btn btn-info">Connect Twitter</a>
+					<a href="/auth/connect/twitter" class="btn btn-info">Connect Twitter</a>
 				<% } %>
 
 			</div>
@@ -93,9 +93,9 @@
 						<strong>email</strong>: <%= user.google.email %><br>
 						<strong>name</strong>: <%= user.google.name %>
 					</p>
-					<a href="/unlink/google" class="btn btn-danger">Unlink</a>
+					<a href="/auth/unlink/google" class="btn btn-danger">Unlink</a>
 				<% } else { %>
-					<a href="/connect/google" class="btn btn-danger">Connect Google</a>
+					<a href="/auth/connect/google" class="btn btn-danger">Connect Google</a>
 				<% } %>
 
 			</div>
