configured to serve angular

--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,3 +1,4 @@
 <h1><%= message %></h1>
-<h2><%= error.status || 'There was an error' %></h2>
-<pre><%= error.stack || 'Thats all we know' %></pre>
+The page you requested could not be found.
+
+1
